--- a/README
+++ b/README
@@ -1,6 +1,4 @@
 1. GAG
-2.  1) Pervakov Grigory, youtolife@yandex.ru, SPbSU, Mathematics and Mechanics, bachelor
-    2) Mukhin Artem, ortem00@gmail.com, SPbSU, Mathematics and Mechanics, bachelor
+2.  1) Pervakov Grigory, youtolife at yandex.ru, SPbSU, Mathematics and Mechanics, bachelor
+    2) Mukhin Artem, ortem00 at gmail.com, SPbSU, Mathematics and Mechanics, bachelor
 3. George Chernishev
-4. Test submit
-5. 
